@@ -23,12 +23,12 @@ public class OAuth2AuthenticationFailureHandler extends SimpleUrlAuthenticationF
         String targetUrl = CookieUtils.getCookie(request, HttpCookieOAuth2AuthorizationRequestRepository.REDIRECT_URI_PARAM_COOKIE_NAME)
                 .map(cookie -> {
                     String val = cookie.getValue();
-                    if (val == null || val.trim().isEmpty()) {
-                        return "http://localhost:3000/oauth2/redirect";
+                    if (val == null || val.isBlank()) {
+                        return "https://sme-frontend-nine.vercel.app/oauth2/redirect";
                     }
                     return val;
                 })
-                .orElse("http://localhost:3000/oauth2/redirect");
+                .orElse("https://sme-frontend-nine.vercel.app/oauth2/redirect");
 
         targetUrl = UriComponentsBuilder.fromUriString(targetUrl)
                 .queryParam("error", exception.getLocalizedMessage())
